--- a/src/app/current-show/current-show.component.css
+++ b/src/app/current-show/current-show.component.css
@@ -1,17 +1,20 @@
 .show-card {
-    background-color: grey;
-    margin: 20px;
-}
-/* .show-image {
-   
-        display: inline-block;
-        vertical-align: middle;
-        max-width: 100%;
-        height: auto;
-} */
-mat-card img{
-    object-fit: cover; 
-    width: 100%; 
-    height: 80%;
-    margin: auto;
+    width: 175px;
+    margin-bottom: 15px;
+  }
+  
+  .show-name {
+    font-size: medium;
+  }
+  
+  .long-text {
+      overflow: hidden;
+      white-space:nowrap;
+      text-overflow:ellipsis;
+      width:150px;
+      display:inline-block;
+  }
+  
+  .show-image {
+    height: 250px;
   }
