Added styles to show details page

--- a/src/app/current-show/current-show.component.html
+++ b/src/app/current-show/current-show.component.html
@@ -5,9 +5,9 @@
             <span class="long-text show-name">{{current.name}}</span>
         </mat-card-title>
         <mat-card-subtitle>
-            <span class="long-text">Language: {{current.language}}</span>
-            <span class="long-text">Runtime: {{current.runtime}}</span>
-            <span class="long-text">Rating:{{current.rating}}</span>
+            <!-- <span class="long-text">Language: {{current.language}}</span>
+            <span class="long-text">Runtime: {{current.runtime}}min</span> -->
+            <span class="long-text">Rating: {{current.rating}}</span>
         </mat-card-subtitle>
     </mat-card>
 
