--- a/src/app/search-results/search-results.component.html
+++ b/src/app/search-results/search-results.component.html
@@ -1,4 +1,4 @@
-<button class="back-button btn-primary" (click)="navigateToHomePage()">< Back</button>
+<!-- <button class="back-button btn-primary" (click)="navigateToHomePage()">< Back</button> -->
 <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="15px" fxLayoutAlign="center center">
   <div *ngFor="let show of shows">
     <app-current-show [current]="show"> </app-current-show>
