--- a/src/app/current-show/current-show.component.html
+++ b/src/app/current-show/current-show.component.html
@@ -1,10 +1,10 @@
 <div class="show-card" (click)="navigateToShowDetails(current.name)">
     <mat-card>
-        <img class="show-image" mat-card-image [src]="current.image">
-        <mat-card-title matTooltip={{current.name}}>
-            <span class="long-text show-name">{{current.name}}</span>
+        <img class="show-image" mat-card-image [src]="current.image" *ngIf="image" >
+        <mat-card-title matTooltip={{current.name}} *ngIf="name" >
+            <span class="long-text show-name" >{{current.name}}</span>
         </mat-card-title>
-        <mat-card-subtitle>
+        <mat-card-subtitle *ngIf="rating">
             <!-- <span class="long-text">Language: {{current.language}}</span>
             <span class="long-text">Runtime: {{current.runtime}}min</span> -->
             <span class="long-text">Rating: {{current.rating}}</span>
